# 10-game_theory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml
game_theory/01-lab-brown_robinson/: brown-robinson.ipynb  iterations_table.csv
game_theory/01-rk-monotonous_algorithm/: monotonic_algorithm.ipynb
game_theory/02-lab-continuous_convex-concave/: continuous_convex-concave.ipynb
game_theory/02-rk-closed_auction/: closed_auction.ipynb
game_theory/03-lab-non_antoganistic/: bimatrix.ipynb
game_theory/03-rk-informational_warfare/: informational_warfare.ipynb
game_theory/04-lab-backward_induction/: nihooya.txt
game_theory/05-lab-sheply_method/: cooperative_sheply_method.ipynb
game_theory/06-lab-information_warfare/: informational_warfare.ipynb
game_theory/introduction_rgz_01/: README.md  input_LPP.json  input_simplex.json  rgz.ipynb
game_theory/lab_01_/: README.md  input_data.json  lab_01_.ipynb
game_theory/utils/: __init__.py  exceptions.py  simplex.py  simplex_table.py
game_theory/utils/bimatrix_games/: bimatrix.py  exceptions.py
game_theory/utils/brown_robinson/: brown_robinson.py
game_theory/utils/continuous_games/: exceptions.py  types.py
game_theory/utils/continuous_games/convex_concave/: numeric.py
game_theory/utils/cooperative/: sheply.py  types.py
game_theory/utils/matrix_games/: analytical.py  brown_robinson.py  exceptions.py  game_matrix.py  mixed_strategies.py  types.py
game_theory/utils/matrix_games/brown_robinson/: brown_robinson.py  labels.py
game_theory/utils/matrix_games/monotonic/: monotonic.py
game_theory/utils/simplex/: dual_problem.py  exceptions.py  simplex_problem.py  simplex_table.py  types.py
